plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // OpenAPI / Swagger UI — available at /swagger-ui.html (alias /docs via springdoc config)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    // GitLab API
    implementation 'org.gitlab4j:gitlab4j-api:6.0.0'

    // Spoon — full AST graph
    implementation 'fr.inria.gforge.spoon:spoon-core:11.2.0'

    // JGit for local repo operations
    implementation 'org.eclipse.jgit:org.eclipse.jgit:7.1.0.202411261347-r'

    // Utilities
    implementation 'org.apache.commons:commons-lang3:3.17.0'
    implementation 'commons-io:commons-io:2.18.0'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

// ---------------------------------------------------------------------------
// Load .env into bootRun environment
// ---------------------------------------------------------------------------
def envFile = rootProject.file('.env')
if (envFile.exists()) {
    def envVars = [:]
    envFile.eachLine { line ->
        line = line.trim()
        if (!line || line.startsWith('#')) return
        def idx = line.indexOf('=')
        if (idx > 0) {
            def key   = line.substring(0, idx).trim()
            def value = line.substring(idx + 1).trim()
            if ((value.startsWith('"') && value.endsWith('"')) ||
                (value.startsWith("'") && value.endsWith("'"))) {
                value = value.substring(1, value.length() - 1)
            }
            envVars[key] = value
        }
    }
    tasks.named('bootRun') {
        environment envVars
    }
}
